--- a/style/styles.css
+++ b/style/styles.css
@@ -1,9 +1,18 @@
 
 body{
-    /* background-image: url("../image/background.jpg"); */
-    padding-left: 40%;
+    background-image: url("../image/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-left: 20%;
     font-family: 'Courier Prime',monospace;
     padding-top: 10%;
+    color: rgb(43, 248, 70);
+    line-height: 200%;
+    font-size: 1.5em;
+}
+button#generate {
+    border: none;
+    border-bottom: 3px rgb(43, 248, 70);
 }
 span#password {
     font-size: large;
@@ -14,3 +23,15 @@ span#clip {
     visibility: hidden;
 }
 
+input#leng {
+    background: rgb(43, 248, 70);
+    border: none;
+    border-bottom: 3px rgb(43, 248, 70);
+    font-size: large;
+}
+.button{
+    background-color: rgb(43, 248, 70);
+    font-size: large;
+    border-radius: 16px;
+    
+}
