--- a/style/styles.css
+++ b/style/styles.css
@@ -18,6 +18,7 @@ button#generate {
 }
 span#password {
     font-size: large;
+    font-size: 3em;
     
 }
 
@@ -45,4 +46,11 @@ input#leng {
 }
 #disclaimer{
     font-size: medium;
+}
+input.check{
+    width: 1.5em;
+    
+    height: 1.5em;
+    border-radius: 0.45em;
+    color: rgb(43, 248, 70);
 }
